# ChangeLog for media-libs/urt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-libs/urt/ChangeLog,v 1.27 2007/02/22 02:07:28 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/urt-3.1b-make.patch, urt-3.1b-r1.ebuild:
  Add patch to fix usage of make vs $(MAKE) with some flags enabled.

  12 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> urt-3.1b-r1.ebuild:
  Add ~x86-fbsd keyword.

  20 Mar 2006; Mike Frysinger <vapier@gentoo.org>
  files/urt-3.1b-build-fixes.patch:
  Patch by Diego Pettenò to respect user LDFLAGS #126872.

  11 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; urt-3.1b-r1.ebuild:
  Add modular X dependencies.

  20 Nov 2005; Hardave Riar <hardave@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on mips, dep for bug #109997.

  04 Nov 2005; Fabian Groffen <grobian@gentoo.org> urt-3.1b-r1.ebuild:
  Marked ppc-macos as dependency of bug #109997

  03 Nov 2005; Mark Loeser <halcy0n@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on x86; bug #109997

  31 Oct 2005; Brent Baude <ranger@gentoo.org> urt-3.1b-r1.ebuild:
  Marking urt-3.1b-r1 ppc64 stable so libgif can be marked stable per bug 109997

  31 Oct 2005; Gustavo Zacarias <gustavoz@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on sparc wrt #109997

  30 Oct 2005; Simon Stelling <blubb@gentoo.org> urt-3.1b-r1.ebuild:
  stable on amd64 wrt bug 109997

  29 Oct 2005; Bryan Østergaard <kloeri@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on alpha.

  29 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on hppa, ppc.

  21 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> urt-3.1b-r1.ebuild:
  Added ~mips.

  18 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on hppa.

  18 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> urt-3.1b-r1.ebuild:
  Added to ~ppc.
